--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build-microfrontend": "react-app-rewired build",
     "test": "react-scripts test",
     "test:coverage": "cross-env CI=TRUE react-scripts test --coverage",
-    "lint": "eslint src/** --fix"
+    "lint": "eslint src/**/*.js --fix"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
@@ -70,6 +70,10 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "eslintIgnore": [
+    "src/serviceWorker.js",
+    "./build"
+  ],
   "browserslist": {
     "production": [
       ">0.2%",
