--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
+    "history": "^4.10.1",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.1",
@@ -22,6 +23,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/history": "^4.7.5",
     "@types/jest": "^25.2.1",
     "@types/testing-library__react": "^10.0.1",
     "cross-env": "^7.0.2",
@@ -31,6 +33,7 @@
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "husky": "^4.2.5",
+    "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.1.3",
     "prettier": "^2.0.4",
     "react-test-renderer": "^16.13.1",
@@ -57,10 +60,16 @@
     }
   },
   "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/src/serviceWorker.js",
+      "!<rootDir>/src/setupProxy.js"
+    ],
     "coverageThreshold": {
       "global": {
         "statements": 85,
-        "branches": 79.43,
+        "branches": 80,
         "functions": 85,
         "lines": 85
       }
