--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "^4.7.5",
     "@types/jest": "^25.2.1",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router-dom": "^5.1.4",
     "@types/testing-library__react": "^10.0.1",
     "cross-env": "^7.0.2",
     "enzyme": "^3.11.0",
