--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_NAME=ContainerExternalName
-#Microfrontend Dependencies
+#MicroFrontend Dependencies
 REACT_APP_EXTERNAL_APP_1_NAME=TestingExternal
 REACT_APP_EXTERNAL_APP_1_HOST=http://localhost:4000
